Add Elasticsearch service support and add getting and filtering products feature
